Fix for long file names on mobile

--- a/assets/sass/dr-elements/_file-upload.scss
+++ b/assets/sass/dr-elements/_file-upload.scss
@@ -64,6 +64,10 @@
   		padding: 5px 0 3px;
   		vertical-align: top;
   	}
+		.filename {
+			overflow:hidden;
+			text-overflow: ellipsis;
+		}
   	@include media(mobile) {
 			.details {
 				display:inline-block;
@@ -80,8 +84,6 @@
   		}
   		.filename {
   		 width:35%;
-       overflow:hidden;
-       text-overflow: ellipsis;
   		}
   		.status {
   		 width:35%;
